fix all completed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">DevAndArt</string>
     <string name="home_page">Home</string>
     <string name="newest_page">Newest</string>
+    <string name="search_page">Search</string>
 </resources>
